--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,3 +5,16 @@ body,
     padding: 0;
     margin: 0;
 }
+
+.el-breadcrumb {
+    margin-bottom: 15px;
+}
+
+.el-card {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15)!important;
+}
+
+.el-table,
+.el-pagination {
+    margin-top: 15px;
+}
