--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,6 +4,7 @@ body,
     height: 100%;
     padding: 0;
     margin: 0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb {
@@ -17,4 +18,21 @@ body,
 .el-table,
 .el-pagination {
     margin-top: 15px;
+}
+
+.el-tag {
+    margin: 7px;
+}
+
+.bdtop {
+  border-top: 1px solid #eee;
+}
+
+.bdbottom {
+  border-bottom: 1px solid #eee;
+}
+
+.vcenter {
+    display: flex;
+    align-items: center;
 }
