--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -21,7 +21,7 @@ body,
 }
 
 .el-tag {
-    margin: 7px;
+    margin: 10px;
 }
 
 .bdtop {
@@ -35,4 +35,21 @@ body,
 .vcenter {
     display: flex;
     align-items: center;
+}
+
+.treeTable {
+    margin-top: 15px;
+}
+
+.el-cascader {
+    width: 100%;
+    /* height: 200px; */
+}
+
+.el-cascader-menu {
+    height: 300px;
+}
+
+.input-new-tag {
+    width: 120px;
 }
