--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -53,3 +53,15 @@ body,
 .input-new-tag {
     width: 120px;
 }
+
+.el-steps {
+    margin: 15px 0;
+}
+
+.el-step__title {
+    font-size: 16px;
+}
+
+.ql-editor {
+    min-height: 300px;
+}
